--- a/src/Projects.css
+++ b/src/Projects.css
@@ -2,21 +2,21 @@
   background-color: white;
   padding-top: 5vh;
   padding-bottom: 3vh;
-  color: #404040
+  color: #404040;
 }
 .projects-container {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1600px;
 }
 .project-card {
   background-color: white;
   max-width: 85%;
   margin: 2.5%;
   padding-bottom: 1em;
-  border: 1px solid #EDEDED;
+  border: 1px solid #ededed;
   box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -55,7 +55,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #2FC6EE;
+  background-color: #2fc6ee;
   visibility: hidden;
   transform: scaleX(0);
   transition: all 0.3s ease-in-out 0s;
@@ -82,5 +82,3 @@
     height: 20vw;
   }
 }
-
-
