--- a/src/SectionHeader.css
+++ b/src/SectionHeader.css
@@ -1,5 +1,5 @@
 .section-header {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 2em;
   display: inline-block;
   padding: 0.2em;
@@ -11,9 +11,9 @@
 }
 
 .blue-underline {
-  border-bottom: 3px solid rgba(85, 202, 249, 1);
+  border-bottom: 3px solid #55caf9;
 }
 
-.pink-underline {
-  border-bottom: 3px solid rgba(250, 112, 159, 1);
+.navy-underline {
+  border-bottom: 3px solid #405977;
 }
