--- a/src/Skills.css
+++ b/src/Skills.css
@@ -2,7 +2,7 @@
   width: 100%;
   padding-top: 4vh;
   padding-bottom: 7vh;
-  background-color: rgba(250, 112, 159, 1);
+  background-color: #405977;
 }
 .skills {
   list-style-type: none;
@@ -15,14 +15,15 @@
   max-width: 600px;
 }
 .skills > li {
-  border: 2px solid #E3DCDC;
-  background-color: #FFF7F7;
+  border: 2px solid #e3dcdc;
+  background-color: #e5e3dc;
   color: #565656;
   width: 7.8em;
   padding: 0.3em 0.2em;
   margin: 0.3em;
   font-weight: bold;
   opacity: 0;
+  border-radius: 20px;
 }
 .skills-section p {
   margin: 1em auto;
@@ -40,4 +41,3 @@
     margin: 0.4em;
   }
 }
-
